auto-test/tests/chapter_8/valid/extra_credit/switch_empty.c
int main(void) {
    int x = 10;
    
    
    
    switch(x = x + 1) {

    }
    switch(x = x + 1)
    ;
    return x;
}