auto-test/tests/chapter_8/invalid_semantics/extra_credit/duplicate_label_in_loop.c
int main(void) {
    do {
        
    lbl:
        return 1;
    lbl:
        return 2;
    } while (1);
    return 0;
}